@@ -12,6 +12,14 @@
   <lang>
     <pcl level="5e" />
   </lang>
+  <autodetect>
+    <usb>
+      <commandset>NPAP, PJL</commandset>
+      <description>Lexmark E120</description>
+      <manufacturer>Lexmark International</manufacturer>
+      <model>Lexmark E120</model>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs-pcl5e</driver>
   <drivers>
